--- a/public/scss/_project.scss
+++ b/public/scss/_project.scss
@@ -1,4 +1,4 @@
-.project-section {
+#project-section {
   -webkit-clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
   background-color: $black;
