--- a/public/scss/_dashboard.scss
+++ b/public/scss/_dashboard.scss
@@ -1,8 +1,7 @@
-.dashboard-section {
-}
-
 .contact-square {
   margin: auto;
+  margin-bottom: 1rem;
+
   h2 {
     color: white;
     text-align: center;
@@ -80,7 +79,69 @@
   }
 }
 
+.container-project-dash {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
 .project-dash {
+  margin-top: 5rem;
+  padding-top: 1.5rem;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  align-items: center;
+  min-width: 270px;
   top: 0;
   left: 0;
+  box-shadow: -35px -30px 0px black;
+
+  img {
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.project-dash-text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  h2 {
+    margin-bottom: 0.7rem;
+  }
+  a {
+    font-weight: 700;
+    color: red;
+    margin-bottom: 0.3rem;
+  }
+  p {
+    margin-bottom: 0.3rem;
+  }
+}
+
+.btn-dash {
+  display: flex;
+  margin-bottom: 0.5rem;
+  width: 50%;
+  justify-content: space-around;
+  .btn-upt {
+    cursor: pointer;
+    padding: 0.5rem;
+    background-color: rgb(59, 59, 59);
+    color: white;
+    border: none;
+    font-weight: 700;
+  }
+  .btn-del {
+    cursor: pointer;
+    font-weight: 700;
+    padding: 0.5rem;
+    background-color: red;
+    color: white;
+    border: none;
+  }
 }
