--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -7,7 +7,6 @@
     </span>
     <div class="menu-after"></div>
     <ul class="menu_items">
-      <li class="list"><i class="fas fa-trophy fa-2x"></i><a href="#project-section">Projet</a></li>
       <li class="list"><i class="fas fa-address-book  fa-2x"></i><a href="/Contact">Contact</a></li>
       <li class="list"><i class="fas fa-users-cog  fa-2x"></i><a href="/users/login">Login</a></li>
     </ul>
@@ -26,7 +25,7 @@
       </main>
       </div>
 </header>
-<section class="project-section">
+<section id="project-section">
   <div id="projet"id="projet" class="container-project" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="500" data-aos-anchor="#projet">
     <div class="h2-css">
     <div class="h2-square">
@@ -59,7 +58,9 @@
     <a href="#Head"><div class="jump-top"><h2>Home</h2></div></a>
     <div class="jump-top"></div>
      <div class="footer-text"data-aos="fade-up" data-aos-duration="300" data-aos-delay="500" data-aos-anchor="#foot">
-      <h2>Vous pouvez me suivre juste ici !</h2>
+      <p>Me Contacter</p>
+      <a href="/Contact"><i class="fas fa-envelope"></i></a>
+      <p>Vous pouvez me suivre juste ici !</p>
       <ul class="reseau">
           <li>
             <a href="https://www.facebook.com/" target="_blank">
