--- a/public/scss/_project.scss
+++ b/public/scss/_project.scss
@@ -38,7 +38,7 @@
     width: 90%;
     height: 85%;
     opacity: 0;
-    background-color: rgb(0, 221, 118);
+    background-color: $red;
     transition: opacity 0.5s ease-in-out;
     font-size: 1rem;
     pointer-events: none;
