--- a/views/MAJproject.ejs
+++ b/views/MAJproject.ejs
@@ -10,7 +10,7 @@
     enctype="multipart/form-data"
   >
     <div class="contact-square">
-      <h2 class="">M<span class="spe-h2">o</span>difier</h2>
+      <h2 class=""><span class="spe-h2">U</span>pdate</h2>
     </div>
     <div class="label-form">
       <label for="title">Titre</label>
@@ -60,10 +60,20 @@
     </div>
 
     <div class="contact-btn">
-      <a class="contact-btn1" href="/admin/dashboard">Annuler</a>
+      <a class="contact-btn1" href="/admin/dashboard">Cancel</a>
       <button type="submit" class="contact-btn2">
         Update
       </button>
     </div>
   </form>
 </section>
+<div id="loader-wrapper">
+  <div class="wrap">
+    <div class="loading">
+      <div class="bounceball"></div>
+      <div class="text">NOW LOADING</div>
+    </div>
+  </div>
+</div>
+
+<script src="/js/loading.js"></script>
