--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,7 @@
 <link rel="stylesheet" href="/css/style.css" />
 <section class="Contact">
   <div class="black-background"></div>
-  <div class="login-form"></div>
+  <div class=""></div>
   <form action="/users/login" method="POST" class="contact-form">
     <div class="contact-square">
       <h2 class="text-center mb-3">
@@ -28,3 +28,13 @@
     </div>
   </form>
 </section>
+<div id="loader-wrapper">
+  <div class="wrap">
+    <div class="loading">
+      <div class="bounceball"></div>
+      <div class="text">NOW LOADING</div>
+    </div>
+  </div>
+</div>
+
+<script src="/js/loading.js"></script>
