--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -8,7 +8,7 @@
     <div class="menu-after"></div>
     <ul class="menu_items">
       <li class="list"><i class="fas fa-address-book  fa-2x"></i><a href="/Contact">Contact</a></li>
-      <li class="list"><i class="fas fa-users-cog  fa-2x"></i><a href="/users/login">Login</a></li>
+      <li class="list"><i class="fas fa-sign-in-alt fa-2x"></i><a href="/users/login">Login</a></li>
     </ul>
     <main class="content">
       <div class="square">
@@ -58,7 +58,12 @@
     <a href="#Head"><div class="jump-top"><h2>Home</h2></div></a>
     <div class="jump-top"></div>
      <div class="footer-text"data-aos="fade-up" data-aos-duration="300" data-aos-delay="500" data-aos-anchor="#foot">
-      <p>Me Contacter</p>
+      <a href="https://github.com/Adousenpai">
+      <p>Github</p>
+      </a>
+      <a href="https://github.com/Adousenpai">
+        <i class="fab fa-github git"></i></a>
+        <a href="/Contact"><p>Me Contacter</p></a>
       <a href="/Contact"><i class="fas fa-envelope"></i></a>
       <p>Vous pouvez me suivre juste ici !</p>
       <ul class="reseau">
@@ -82,21 +87,24 @@
             </a>
           </li>
 
-          <li>
-            <a href="https://www.instagram.com/" target="_blank">
-              <span></span>
-              <span></span>
-              <span></span>
-              <span></span>
-              <span class="fab fa-instagram"></span>
-            </a>
-          </li>
+          
         </ul>
     </div>
     </div>
   
    <div class="square-background"></div>
  </footer>
- <script src="/js/texte.js"></script>
-    <script src="/js/slider.js"></script>
+
+ <div id="loader-wrapper">
+ <div class="wrap">
+  <div class="loading">
+    <div class="bounceball"></div>
+    <div class="text">NOW LOADING</div>
+  </div>
+</div>
+</div>
+
+<script src="/js/loading.js"></script>
+<script src="/js/texte.js"></script>
+<script src="/js/slider.js"></script>
 
