--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,7 @@ body {
   height: 100vh;
   position: relative;
   transform-origin: top left;
-  transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
+  transition: transform 0.5s cubic-bezier(1, 0.005, 0.24, 1);
   background-color: #c90000; }
 
 /* basically all styling from now on */
@@ -237,7 +237,7 @@ body {
     width: 90%;
     height: 85%;
     opacity: 0;
-    background-color: #00dd76;
+    background-color: #c90000;
     transition: opacity 0.5s ease-in-out;
     font-size: 1rem;
     pointer-events: none; }
@@ -468,7 +468,7 @@ body {
   margin-top: -1px;
   background-color: #000000;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 20%, 0 80%);
-  clip-path: polygon(0 0, 100% 0, 100% 20%, 0 80%); }
+  clip-path: polygon(0 0, 100% 0, 100% 10%, 0 90%); }
 
 footer {
   position: relative;
@@ -497,9 +497,14 @@ footer {
     justify-content: center; }
     .footer-text .char-footer img {
       width: 50%; }
+  .footer-text a {
+    color: white;
+    font-size: 1.2rem; }
   .footer-text p {
     color: white;
     font-size: 1.2rem; }
+  .footer-text .git:hover {
+    color: black; }
   .footer-text i {
     font-size: 3rem;
     color: white;
@@ -617,19 +622,29 @@ footer {
   .contact-form input[type='text'],
   .contact-form input[type='email'],
   .contact-form input[type='password'] {
-    border: #a1a1a1 1px solid;
+    border: #e2e2e2 1px solid;
     text-align: center;
-    background-color: lightgrey;
+    background-color: #f0f0f0;
     height: 2rem;
     padding: 0 2rem;
-    margin-bottom: 1rem; }
+    margin-bottom: 1rem;
+    outline: none; }
+    .contact-form input[type='text']:focus,
+    .contact-form input[type='email']:focus,
+    .contact-form input[type='password']:focus {
+      border: black 1px solid;
+      background-color: #e8f0fe; }
   .contact-form textarea {
-    border: #a1a1a1 1px solid;
+    border: #e2e2e2 1px solid;
     text-align: center;
-    background-color: lightgrey;
+    background-color: #f0f0f0;
     height: 5.5rem;
     padding: 1rem 2rem;
-    margin-bottom: 1rem; }
+    margin-bottom: 1rem;
+    outline: none; }
+    .contact-form textarea:focus {
+      border: black 1px solid;
+      background-color: #e8f0fe; }
 
 .contact-square {
   -webkit-clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
@@ -807,7 +822,9 @@ footer {
   min-width: 270px;
   top: 0;
   left: 0;
-  box-shadow: -35px -30px 0px black; }
+  margin-left: 1.5rem;
+  -webkit-clip-path: polygon(0 7%, 100% 0%, 100% 93%, 0% 100%);
+  clip-path: polygon(0 5%, 100% 0%, 100% 95%, 0% 100%); }
   .project-dash img {
     width: 100%;
     height: 100%; }
@@ -823,6 +840,7 @@ footer {
     color: red;
     margin-bottom: 0.3rem; }
   .project-dash-text p {
+    width: 70%;
     margin-bottom: 0.3rem; }
 
 .btn-dash {
@@ -852,5 +870,103 @@ footer {
   position: relative; }
   .maj-section img {
     width: 20%; }
+
+#loader-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #c90000;
+  width: 100%;
+  height: 100%;
+  z-index: 50;
+  transition: all 0.5s ease; }
+
+.wrap {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); }
+
+.text {
+  color: white;
+  font-size: 1.5rem;
+  display: inline-block;
+  margin-left: 5px;
+  font-weight: 700; }
+
+.bounceball {
+  position: relative;
+  display: inline-block;
+  height: 37px;
+  width: 25px;
+  margin-right: 1rem; }
+  .bounceball:before {
+    position: absolute;
+    content: '';
+    display: block;
+    top: 0;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    background-color: white;
+    transform-origin: 50%;
+    animation: bounce 500ms alternate infinite ease; }
+
+@keyframes bounce {
+  0% {
+    top: 30px;
+    height: 5px;
+    border-radius: 60px 60px 20px 20px;
+    transform: scaleX(2); }
+  35% {
+    height: 25px;
+    border-radius: 50%;
+    transform: scaleX(1); }
+  100% {
+    top: 0; } }
+.done {
+  opacity: 0;
+  pointer-events: none; }
+
+.warning {
+  background-color: #ffc457;
+  color: white;
+  padding: 5px;
+  border-radius: 5px; }
+
+.success {
+  background-color: #18c753;
+  color: white;
+  padding: 5px;
+  border-radius: 5px; }
+
+.success2 {
+  margin: auto;
+  text-align: center;
+  padding: 5px;
+  border-radius: 5px;
+  width: 40%;
+  background-color: #2cb460;
+  color: white; }
+
+.danger {
+  background-color: #ff3a3a;
+  color: white;
+  padding: 5px;
+  border-radius: 5px; }
+
+.close {
+  background-color: transparent;
+  border: none;
+  float: right;
+  margin-right: 5px;
+  padding-top: 3px;
+  height: 100%;
+  cursor: pointer; }
+  .close i {
+    color: white; }
+
+.close:focus {
+  outline: none; }
 
 /*# sourceMappingURL=style.css.map */
