--- a/public/scss/_dashboard.scss
+++ b/public/scss/_dashboard.scss
@@ -98,7 +98,11 @@
   min-width: 270px;
   top: 0;
   left: 0;
-  box-shadow: -35px -30px 0px black;
+  // box-shadow: -25px -20px 4px rgba(0, 0, 0, 0.658);
+  margin-left: 1.5rem;
+  // border-radius: 3px;
+  -webkit-clip-path: polygon(0 7%, 100% 0%, 100% 93%, 0% 100%);
+  clip-path: polygon(0 5%, 100% 0%, 100% 95%, 0% 100%);
 
   img {
     width: 100%;
@@ -119,6 +123,7 @@
     margin-bottom: 0.3rem;
   }
   p {
+    width: 70%;
     margin-bottom: 0.3rem;
   }
 }
