--- a/public/scss/_footer.scss
+++ b/public/scss/_footer.scss
@@ -3,7 +3,7 @@
   margin-top: -1px;
   background-color: $black;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 20%, 0 80%);
-  clip-path: polygon(0 0, 100% 0, 100% 20%, 0 80%);
+  clip-path: polygon(0 0, 100% 0, 100% 10%, 0 90%);
 }
 
 footer {
@@ -38,9 +38,16 @@ footer {
       width: 50%;
     }
   }
+  a {
+    color: white;
+    font-size: 1.2rem;
+  }
   p {
     color: white;
     font-size: 1.2rem;
+  }
+  .git:hover {
+    color: black;
   }
   i {
     font-size: 3rem;
