--- a/public/scss/_form.scss
+++ b/public/scss/_form.scss
@@ -32,24 +32,35 @@
       padding-right: 1.5rem;
     }
   }
+
   input[type='text'],
   input[type='email'],
   input[type='password'] {
-    border: rgb(161, 161, 161) 1px solid;
+    border: rgb(226, 226, 226) 1px solid;
     text-align: center;
-    background-color: lightgrey;
+    background-color: rgb(240, 240, 240);
     height: 2rem;
     padding: 0 2rem;
     margin-bottom: 1rem;
+    outline: none;
+    &:focus {
+      border: black 1px solid;
+      background-color: #e8f0fe;
+    }
   }
 
   textarea {
-    border: rgb(161, 161, 161) 1px solid;
+    border: rgb(226, 226, 226) 1px solid;
     text-align: center;
-    background-color: lightgrey;
+    background-color: rgb(240, 240, 240);
     height: 5.5rem;
     padding: 1rem 2rem;
     margin-bottom: 1rem;
+    outline: none;
+    &:focus {
+      border: black 1px solid;
+      background-color: #e8f0fe;
+    }
   }
 }
 
