--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -6,8 +6,8 @@
     <form action="/contact-post" method="POST" class="contact-form">
       <div class="contact-square">
       <h2><i class="fas fa-envelope"></i>Cont<span class="spe-h2">a</span>ct</h2>
-      <% include ./components/messages %>
       </div>
+      <% include ./components/messages %>
       <div class="label-form">
         <label for="name">Nom</label>
         <input type="text" id="name" name="name" required/>
@@ -38,3 +38,14 @@
     </form>
    
 </section>
+
+<div id="loader-wrapper">
+  <div class="wrap">
+   <div class="loading">
+     <div class="bounceball"></div>
+     <div class="text">NOW LOADING</div>
+   </div>
+ </div>
+ </div>
+ 
+ <script src="/js/loading.js"></script>
