--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -34,6 +34,7 @@
     <script>
       AOS.init();
     </script>
+    <script src="/js/close.js"></script>
     <script src="/js/menu.js"></script>
   </body>
 </html>
