--- a/views/project.ejs
+++ b/views/project.ejs
@@ -4,12 +4,12 @@
   <div class="contact-form"></div>
         <form class="contact-form" action="/admin/projectPost" method="POST" enctype="multipart/form-data">
           <div class="contact-square">
-          <h2 class="text-center mb-3"><i class="fas fa-plus-circle"></i>Aj<span class="spe-h2">o</span>ut<span class="spe-h2">e</span>r</h2>
+          <h2 class="text-center mb-3"><i class="fas fa-plus-circle"></i><span class="spe-h2">a</span>dd</h2>
           </div>
       <%= typeof msg != 'undefined' ? msg: "" %>
         <div class="label-form">
-        <label for="title">Titre</label>
-        <input type="text" id="title" name="title"/>
+        <label for="title">Title</label>
+        <input type="text" id="title" name="title" required/>
 
         <div class="label-form">
             <label for="prev">Git Page</label>
@@ -22,7 +22,7 @@
       
 
       <div class="label-form">
-      <label for="msg">Description</label>
+      <label for="msg" required>Message</label>
       <textarea
     
       id="description"
@@ -46,5 +46,13 @@
       </div>
     </section>
 
-
-
+    <div id="loader-wrapper">
+      <div class="wrap">
+       <div class="loading">
+         <div class="bounceball"></div>
+         <div class="text">NOW LOADING</div>
+       </div>
+     </div>
+     </div>
+     
+     <script src="/js/loading.js"></script>
