--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -17,8 +17,8 @@
         <div class="project-dash">
           <div class="project-dash-text">
           <h2> <%= project[i].title %> </h2>
-          <a href="<%= project[i].prev %>">Aperçu</a>
-          <a href="<%= project[i].git %>">Github</a>
+          <a href="<%= project[i].prev %>" target="_blank">Aperçu</a>
+          <a href="<%= project[i].git %>" target="_blank">Github</a>
           <p> <%= project[i].description %> </p>
         </div>
         <div class="btn-dash">
