--- a/public/scss/_dashboard.scss
+++ b/public/scss/_dashboard.scss
@@ -101,8 +101,6 @@
   // box-shadow: -25px -20px 4px rgba(0, 0, 0, 0.658);
   margin-left: 1.5rem;
   // border-radius: 3px;
-  -webkit-clip-path: polygon(0 7%, 100% 0%, 100% 93%, 0% 100%);
-  clip-path: polygon(0 5%, 100% 0%, 100% 95%, 0% 100%);
 
   img {
     width: 100%;
@@ -114,17 +112,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  text-align: center;
   h2 {
     margin-bottom: 0.7rem;
   }
   a {
     font-weight: 700;
     color: red;
-    margin-bottom: 0.3rem;
+    margin-bottom: 0.5rem;
   }
   p {
     width: 70%;
-    margin-bottom: 0.3rem;
+    margin-bottom: 0.5rem;
+    text-align: center;
   }
 }
 
