--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <title>Document</title>
+    <title>Portfolio</title>
   </head>
   <body>
     <%- body %>
