--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -38,7 +38,7 @@
         <div class="project">
           <div class="project-text">
             <h2> <%= project[i].title %> </h2>
-            <p><%= project[i].description %>br</p>
+            <p><%= project[i].description %></p>
             <div class="btn-link">
             <a id="btn1" href="<%= project[i].prev %>" target="_blank" >Aperçu <i class="fas fa-external-link-alt"></i></a>
             <a  id="btn2" href="<%= project[i].git %>" target="_blank">Github<i class="fas fa-external-link-alt"></i></a>
