--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -58,13 +58,13 @@
     <a href="#Head"><div class="jump-top"><h2>Home</h2></div></a>
     <div class="jump-top"></div>
      <div class="footer-text"data-aos="fade-up" data-aos-duration="300" data-aos-delay="500" data-aos-anchor="#foot">
-      <a href="https://github.com/Adousenpai">
+      <a href="https://github.com/Adousenpai" target="_blank">
       <p>Github</p>
       </a>
-      <a href="https://github.com/Adousenpai">
+      <a href="https://github.com/Adousenpai" target="_blank">
         <i class="fab fa-github git"></i></a>
-        <a href="/Contact"><p>Me Contacter</p></a>
-      <a href="/Contact"><i class="fas fa-envelope"></i></a>
+        <a target="_blank" href="/Contact"><p>Me Contacter</p></a>
+      <a  target="_blank" href="/Contact"><i class="fas fa-envelope"></i></a>
       <p>Vous pouvez me suivre juste ici !</p>
       <ul class="reseau">
           <li>
