--- a/public/scss/_project.scss
+++ b/public/scss/_project.scss
@@ -112,7 +112,7 @@
   }
 
   .project_img {
-    height: 70%;
+    width: 60%;
     border: 2px solid black;
     cursor: pointer;
     box-shadow: 25px -15px 2px rgba(0, 0, 0, 0.247);
