--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,8 @@
 @font-face {
-  font-family: 'Dharma';
+  font-family: "Dharma";
   src: url("../fonts/Dharma Punk 2.ttf") format("truetype"); }
 @font-face {
-  font-family: 'p5';
+  font-family: "p5";
   src: url("/fonts/p5.ttf") format("truetype"); }
 * {
   scroll-behavior: smooth;
@@ -10,17 +10,15 @@
   padding: 0;
   box-sizing: border-box;
   letter-spacing: 1px;
-  font-family: 'Poppins', sans-serif; }
-  * h1 {
-    font-family: 'Dharma', sans-serif; }
+  font-family: "Poppins", sans-serif; }
 
 body {
   background-color: #c90000;
   overflow: hidden; }
 
 .page {
-  height: 100%;
-  background-color: #000000; }
+  height: 100vh;
+  background-color: black; }
 
 .content {
   height: 100vh;
@@ -29,7 +27,6 @@ body {
   transition: transform 0.5s cubic-bezier(1, 0.005, 0.24, 1);
   background-color: #c90000; }
 
-/* basically all styling from now on */
 .menu_toggle {
   z-index: 9;
   position: absolute;
@@ -103,7 +100,7 @@ body {
   transform: translateX(-300px);
   transition: transform 0.7s 0s cubic-bezier(1, 0.005, 0.24, 1); }
   .list:after {
-    content: '';
+    content: "";
     -webkit-clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%);
     clip-path: polygon(17% 25%, 79% 0, 100% 100%, 79% 0%);
     position: absolute;
@@ -114,7 +111,7 @@ body {
     height: 60px;
     background-color: #c90000; }
   .list:before {
-    content: '';
+    content: "";
     -webkit-clip-path: polygon(0% 80%, 79% 100%, 100% 100%, 0% 100%);
     clip-path: polygon(0% 100%, 79% 100%, 100% 100%, 0% 100%);
     position: absolute;
@@ -143,7 +140,7 @@ body {
 
 .menu_items a {
   margin-right: 1rem;
-  font-family: 'Dharma', sans-serif;
+  font-family: "Dharma", sans-serif;
   font-size: 2rem;
   text-align: center;
   text-decoration: none;
@@ -181,7 +178,6 @@ body {
 .menu_items a:active .icon {
   color: #f37272; }
 
-/* Let's open up the menu */
 .shazam .content {
   transform: rotate(-30deg); }
 
@@ -201,15 +197,16 @@ body {
 .shazam .menu_items li:nth-child(3) {
   transition-delay: 0.48s; }
 
+.disapear {
+  opacity: 0 !important; }
+
 #project-section {
   -webkit-clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
-  clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 8%, 100% 0, 100% 100%, 0 100%);
   background-color: #000000;
   position: relative;
   padding-top: 4rem;
   height: 90vh; }
-  #project-section:nth-child(2) {
-    clip-path: none; }
 
 .container-project {
   transform: rotate(2deg);
@@ -224,7 +221,7 @@ body {
   height: 100%;
   margin: auto; }
   .container-project .project {
-    padding: 8% 10% 0% 10%;
+    padding: 5% 6% 0% 6%;
     border-radius: 3px;
     bottom: 50%;
     right: 50%;
@@ -242,7 +239,7 @@ body {
     font-size: 1rem;
     pointer-events: none; }
     .container-project .project:after {
-      content: '';
+      content: "";
       position: absolute;
       top: 0;
       left: 0;
@@ -256,53 +253,58 @@ body {
     display: flex;
     width: 40%;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
-    text-align: left; }
+    text-align: center; }
     .container-project .project-text h2 {
       text-transform: uppercase;
-      font-size: 2rem;
+      font-size: 2.3rem;
       color: #000000;
-      margin-bottom: 1em; }
+      margin-bottom: 0.5em; }
     .container-project .project-text p {
       word-wrap: break-word;
       width: 100%;
-      font-size: 1rem;
+      font-size: 1.2rem;
       margin-bottom: 1.5em; }
-    .container-project .project-text #btn1 {
-      background-color: #000000;
-      text-decoration: none;
-      font-weight: 700;
-      mix-blend-mode: multiply;
-      color: #ffffff;
-      border: #000000 2px solid;
-      padding: 9px;
-      transition: all 0.5s ease; }
-      .container-project .project-text #btn1:hover {
+    .container-project .project-text .btn-link {
+      display: flex;
+      flex-direction: row; }
+      .container-project .project-text .btn-link #btn1 {
+        background-color: #000000;
+        text-decoration: none;
+        font-weight: 700;
         mix-blend-mode: multiply;
         color: #ffffff;
-        background-color: rgba(0, 0, 0, 0.863);
-        border: rgba(0, 0, 0, 0) 2px solid; }
-    .container-project .project-text #btn2 {
-      padding: 10px;
-      background-color: transparent;
-      border: #000000 2px solid;
-      text-decoration: none;
-      font-weight: 700;
-      color: #000000;
-      transition: all 0.5s ease; }
-      .container-project .project-text #btn2:hover {
-        mix-blend-mode: multiply;
-        color: #ffffff;
-        background-color: rgba(0, 0, 0, 0.863);
-        border: rgba(0, 0, 0, 0) 2px solid; }
+        border: #000000 2px solid;
+        padding: 9px;
+        transition: all 0.5s ease;
+        min-width: 100px; }
+        .container-project .project-text .btn-link #btn1:hover {
+          mix-blend-mode: multiply;
+          color: #ffffff;
+          background-color: rgba(0, 0, 0, 0.863);
+          border: rgba(0, 0, 0, 0) 2px solid; }
+      .container-project .project-text .btn-link #btn2 {
+        min-width: 100px;
+        padding: 10px;
+        background-color: transparent;
+        border: #000000 2px solid;
+        text-decoration: none;
+        font-weight: 700;
+        color: #000000;
+        transition: all 0.5s ease; }
+        .container-project .project-text .btn-link #btn2:hover {
+          mix-blend-mode: multiply;
+          color: #ffffff;
+          background-color: rgba(0, 0, 0, 0.863);
+          border: rgba(0, 0, 0, 0) 2px solid; }
   .container-project .active {
     opacity: 1;
     pointer-events: visible; }
   .container-project .project_img {
-    width: 60%;
+    width: 65%;
     border: 2px solid black;
-    cursor: pointer;
-    box-shadow: 25px -15px 2px rgba(0, 0, 0, 0.247); }
+    cursor: pointer; }
 
 #left {
   opacity: 0;
@@ -330,87 +332,112 @@ body {
     color: #ffffff;
     transform: scale(1.3); }
 
+@media screen and (max-width: 992px) {
+  #project-section {
+    height: 105vh; }
+
+  .container-project .project {
+    flex-direction: column;
+    justify-content: center; }
+    .container-project .project .project-text {
+      height: 35%; }
+      .container-project .project .project-text h2 {
+        text-transform: uppercase;
+        font-size: 2rem;
+        color: #000000;
+        margin-bottom: 0.5em; }
+      .container-project .project .project-text p {
+        word-wrap: break-word;
+        width: 100%;
+        font-size: 1rem;
+        margin-bottom: 0.5em; }
+    .container-project .project .project_img {
+      width: 90%; }
+    .container-project .project .btn-link {
+      display: flex;
+      flex-wrap: wrap; } }
+.content:after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.171);
+  -webkit-clip-path: polygon(0 0, 0 15%, 100% 0);
+  clip-path: polygon(0 0, 0 5%, 100% 0); }
+.content:before {
+  content: "";
+  position: absolute;
+  top: 78%;
+  transform: translate(0, -50%);
+  left: 0;
+  width: 100%;
+  height: 80%;
+  background-color: rgba(0, 0, 0, 0.171);
+  -webkit-clip-path: polygon(0 0, 93% 3%, 100% 100%, 6% 100%);
+  clip-path: polygon(2% 0, 100% 10%, 100% 70%, 12% 75%); }
+
 .square {
   margin-left: auto;
-  width: 75%;
-  height: 100%;
-  background-image: url("/images/Header-square.svg");
-  background-repeat: no-repeat;
-  background-position: right 0 top 0;
-  background-size: 100%;
+  width: 101%;
+  margin-left: -1px;
+  height: 85%;
+  background-color: black;
   position: relative;
-  filter: drop-shadow(-150px 80px 0 rgba(0, 0, 0, 0.24)); }
+  padding-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  -webkit-clip-path: polygon(0 0, 93% 3%, 100% 100%, 6% 100%);
+  clip-path: polygon(5% 0, 100% 10%, 100% 70%, 15% 75%); }
 
-.h1-square {
-  background-color: #ffffff;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translate(-50%, -10%);
-  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
-  clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
-  width: 50%;
-  height: 15%;
-  z-index: 5; }
-  .h1-square h1 {
-    text-align: center;
-    font-size: 5rem;
-    transform: rotate(-2deg);
-    padding-right: 2rem;
-    padding-top: 3px; }
-  .h1-square:after {
-    content: '';
-    background-color: cyan;
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, -10%);
-    -webkit-clip-path: polygon(0 0, 100% 9%, 95% 9%, 6% 10%);
-    clip-path: polygon(0 0, 100% 9%, 95% 9%, 6% 10%);
-    width: 100%;
-    height: 100%;
-    z-index: 5; }
+.title {
+  text-align: center;
+  font-size: 4.5rem;
+  font-family: "Poppins";
+  color: black;
+  -webkit-text-fill-color: white;
+  -webkit-text-stroke-width: 4px;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  height: 240px; }
+
+.h1-title {
+  font-size: 13rem;
+  margin-right: -4rem; }
 
 .char-header {
-  position: absolute;
-  width: 100%;
-  top: 40%;
-  left: 10%;
-  transform: translate(0, -50%); }
-  .char-header #Morg-header {
-    width: 20%;
-    filter: drop-shadow(-15px 15px 2px black); }
-  .char-header #Speak {
-    width: 55%;
-    position: absolute;
-    top: 17%;
-    left: 15%; }
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%; }
+  .char-header .speaker {
+    margin-top: -5rem;
+    width: 550px;
+    height: 260px;
+    background: white;
+    padding-top: 8.5rem;
+    z-index: 3;
+    -webkit-clip-path: polygon(0 96%, 100% 100%, 100% 24%, 56% 31%, 57% 0, 50% 32%, 0 43%);
+    clip-path: polygon(0 96%, 90% 100%, 100% 29%, 90% 31%, 60% 0, 85% 32%, 10% 43%);
+    display: flex;
+    align-items: center;
+    justify-content: center; }
   .char-header p {
-    color: white;
-    width: 30%;
-    position: absolute;
-    top: 45%;
-    left: 35%;
-    font-size: 1.2rem; }
+    text-align: left;
+    color: black;
+    width: 75%;
+    font-size: 1.2rem;
+    height: 100%; }
 
 .spe {
   color: #c90000;
-  font-family: 'Dharma'; }
+  font-family: "Dharma"; }
 
 .spe-h2 {
   color: #c90000; }
-
-.red-square {
-  z-index: 4;
-  background-color: #c90000;
-  position: absolute;
-  top: 8%;
-  left: 48%;
-  transform: rotate(-4deg) translate(-50%, -10%);
-  -webkit-clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
-  clip-path: polygon(0 0, 100% 9%, 95% 70%, 6% 100%);
-  width: 50%;
-  height: 15%; }
 
 .h2-css {
   position: absolute;
@@ -435,7 +462,7 @@ body {
     text-align: center;
     font-size: 2.2rem; }
   .h2-square:before {
-    content: '';
+    content: "";
     background-color: #c90000;
     position: absolute;
     display: block;
@@ -468,7 +495,7 @@ body {
   margin-top: -1px;
   background-color: #000000;
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 20%, 0 80%);
-  clip-path: polygon(0 0, 100% 0, 100% 10%, 0 90%); }
+  clip-path: polygon(0 0, 100% 0, 100% 90%, 0 10%); }
 
 footer {
   position: relative;
@@ -619,9 +646,9 @@ footer {
     font-size: 2.5rem; }
     .contact-form h2 i {
       padding-right: 1.5rem; }
-  .contact-form input[type='text'],
-  .contact-form input[type='email'],
-  .contact-form input[type='password'] {
+  .contact-form input[type="text"],
+  .contact-form input[type="email"],
+  .contact-form input[type="password"] {
     border: #e2e2e2 1px solid;
     text-align: center;
     background-color: #f0f0f0;
@@ -629,9 +656,9 @@ footer {
     padding: 0 2rem;
     margin-bottom: 1rem;
     outline: none; }
-    .contact-form input[type='text']:focus,
-    .contact-form input[type='email']:focus,
-    .contact-form input[type='password']:focus {
+    .contact-form input[type="text"]:focus,
+    .contact-form input[type="email"]:focus,
+    .contact-form input[type="password"]:focus {
       border: black 1px solid;
       background-color: #e8f0fe; }
   .contact-form textarea {
@@ -680,12 +707,13 @@ footer {
   padding: 0.5rem;
   border: none;
   padding-left: 1rem;
-  background-color: #c90000;
+  font-size: 1.1rem;
+  background-color: #000000;
   -webkit-clip-path: polygon(25% 0%, 100% 1%, 100% 100%, 25% 100%, 0% 50%);
   clip-path: polygon(15% 0%, 100% 1%, 100% 100%, 15% 100%, 0% 50%);
   transition: all 0.5s ease; }
   .contact-btn1:hover {
-    background-color: #6d0101;
+    background-color: #c90000;
     color: #ffffff; }
 
 .contact-btn2 {
@@ -693,15 +721,16 @@ footer {
   color: white;
   font-weight: 700;
   cursor: pointer;
+  font-size: 1.1rem;
   padding: 0.5rem;
   padding-right: 1rem;
   border: none;
-  background-color: #000000;
+  background-color: #2cb460;
   -webkit-clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
   clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
   transition: all 0.5s ease; }
   .contact-btn2:hover {
-    background-color: #2cb460; }
+    background-color: #1a7a3f; }
 
 .upload-btn-wrapper {
   position: relative;
@@ -725,7 +754,7 @@ footer {
   .btn i {
     margin-right: 0.8rem; }
 
-.upload-btn-wrapper input[type='file'] {
+.upload-btn-wrapper input[type="file"] {
   font-size: 100px;
   position: absolute;
   left: 0;
@@ -872,10 +901,10 @@ footer {
     width: 20%; }
 
 #loader-wrapper {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  background-color: #c90000;
+  background-color: #000000;
   width: 100%;
   height: 100%;
   z-index: 50;
@@ -902,7 +931,7 @@ footer {
   margin-right: 1rem; }
   .bounceball:before {
     position: absolute;
-    content: '';
+    content: "";
     display: block;
     top: 0;
     width: 25px;
