--- a/public/scss/_form.scss
+++ b/public/scss/_form.scss
@@ -33,9 +33,9 @@
     }
   }
 
-  input[type='text'],
-  input[type='email'],
-  input[type='password'] {
+  input[type="text"],
+  input[type="email"],
+  input[type="password"] {
     border: rgb(226, 226, 226) 1px solid;
     text-align: center;
     background-color: rgb(240, 240, 240);
@@ -102,12 +102,13 @@
   padding: 0.5rem;
   border: none;
   padding-left: 1rem;
-  background-color: $red;
+  font-size: 1.1rem;
+  background-color: $black;
   -webkit-clip-path: polygon(25% 0%, 100% 1%, 100% 100%, 25% 100%, 0% 50%);
   clip-path: polygon(15% 0%, 100% 1%, 100% 100%, 15% 100%, 0% 50%);
   transition: all 0.5s ease;
   &:hover {
-    background-color: rgb(109, 1, 1);
+    background-color: $red;
     color: $white;
   }
 }
@@ -117,15 +118,16 @@
   color: white;
   font-weight: 700;
   cursor: pointer;
+  font-size: 1.1rem;
   padding: 0.5rem;
   padding-right: 1rem;
   border: none;
-  background-color: $black;
+  background-color: rgb(44, 180, 96);
   -webkit-clip-path: polygon(0% 0%, 75% 0%, 100% 50%, 75% 100%, 0% 100%);
   clip-path: polygon(0% 0%, 85% 0%, 100% 50%, 85% 100%, 0% 100%);
   transition: all 0.5s ease;
   &:hover {
-    background-color: rgb(44, 180, 96);
+    background-color: rgb(26, 122, 63);
   }
 }
 
@@ -155,7 +157,7 @@
   }
 }
 
-.upload-btn-wrapper input[type='file'] {
+.upload-btn-wrapper input[type="file"] {
   font-size: 100px;
   position: absolute;
   left: 0;
