--- a/public/scss/_loading.scss
+++ b/public/scss/_loading.scss
@@ -3,10 +3,10 @@ $height: 25px;
 $bounce_height: 30px;
 
 #loader-wrapper {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  background-color: $red;
+  background-color: $black;
   width: 100%;
   height: 100%;
   z-index: 50;
@@ -36,7 +36,7 @@ $bounce_height: 30px;
   margin-right: 1rem;
   &:before {
     position: absolute;
-    content: '';
+    content: "";
     display: block;
     top: 0;
     width: $width;
