--- a/public/scss/_project.scss
+++ b/public/scss/_project.scss
@@ -1,14 +1,10 @@
 #project-section {
   -webkit-clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
-  clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 8%, 100% 0, 100% 100%, 0 100%);
   background-color: $black;
   position: relative;
   padding-top: 4rem;
   height: 90vh;
-
-  &:nth-child(2) {
-    clip-path: none;
-  }
 }
 
 .container-project {
@@ -25,7 +21,7 @@
   margin: auto;
 
   .project {
-    padding: 8% 10% 0% 10%;
+    padding: 5% 6% 0% 6%;
     border-radius: 3px;
     bottom: 50%;
     right: 50%;
@@ -43,7 +39,7 @@
     font-size: 1rem;
     pointer-events: none;
     &:after {
-      content: '';
+      content: "";
       position: absolute;
       top: 0;
       left: 0;
@@ -59,50 +55,57 @@
     display: flex;
     width: 40%;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
-    text-align: left;
+    text-align: center;
     h2 {
       text-transform: uppercase;
-      font-size: 2rem;
+      font-size: 2.3rem;
       color: $black;
-      margin-bottom: 1em;
+      margin-bottom: 0.5em;
     }
     p {
       word-wrap: break-word;
       width: 100%;
-      font-size: 1rem;
+      font-size: 1.2rem;
       margin-bottom: 1.5em;
     }
-
-    #btn1 {
-      background-color: $black;
-      text-decoration: none;
-      font-weight: 700;
-      mix-blend-mode: multiply;
-      color: $white;
-      border: $black 2px solid;
-      padding: 9px;
-      transition: all 0.5s ease;
-      &:hover {
+    .btn-link {
+      display: flex;
+      flex-direction: row;
+      #btn1 {
+        background-color: $black;
+        text-decoration: none;
+        font-weight: 700;
         mix-blend-mode: multiply;
         color: $white;
-        background-color: rgba(0, 0, 0, 0.863);
-        border: rgba(0, 0, 0, 0) 2px solid;
+        border: $black 2px solid;
+        padding: 9px;
+        transition: all 0.5s ease;
+        min-width: 100px;
+        &:hover {
+          mix-blend-mode: multiply;
+          color: $white;
+          background-color: rgba(0, 0, 0, 0.863);
+          border: rgba(0, 0, 0, 0) 2px solid;
+        }
       }
-    }
-    #btn2 {
-      padding: 10px;
-      background-color: transparent;
-      border: $black 2px solid;
-      text-decoration: none;
-      font-weight: 700;
-      color: $black;
-      transition: all 0.5s ease;
-      &:hover {
-        mix-blend-mode: multiply;
-        color: $white;
-        background-color: rgba(0, 0, 0, 0.863);
-        border: rgba(0, 0, 0, 0) 2px solid;
+
+      #btn2 {
+        min-width: 100px;
+        padding: 10px;
+        background-color: transparent;
+        border: $black 2px solid;
+        text-decoration: none;
+        font-weight: 700;
+        color: $black;
+        transition: all 0.5s ease;
+        &:hover {
+          mix-blend-mode: multiply;
+          color: $white;
+          background-color: rgba(0, 0, 0, 0.863);
+          border: rgba(0, 0, 0, 0) 2px solid;
+        }
       }
     }
   }
@@ -112,10 +115,9 @@
   }
 
   .project_img {
-    width: 60%;
+    width: 65%;
     border: 2px solid black;
     cursor: pointer;
-    box-shadow: 25px -15px 2px rgba(0, 0, 0, 0.247);
   }
 }
 
@@ -146,5 +148,39 @@
   &:hover {
     color: $white;
     transform: scale(1.3);
+  }
+}
+
+@media screen and (max-width: 992px) {
+  #project-section {
+    height: 105vh;
+  }
+  .container-project {
+    .project {
+      flex-direction: column;
+      justify-content: center;
+      .project-text {
+        height: 35%;
+        h2 {
+          text-transform: uppercase;
+          font-size: 2rem;
+          color: $black;
+          margin-bottom: 0.5em;
+        }
+        p {
+          word-wrap: break-word;
+          width: 100%;
+          font-size: 1rem;
+          margin-bottom: 0.5em;
+        }
+      }
+      .project_img {
+        width: 90%;
+      }
+      .btn-link {
+        display: flex;
+        flex-wrap: wrap;
+      }
+    }
   }
 }
