--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -11,17 +11,19 @@
       <li class="list"><i class="fas fa-sign-in-alt fa-2x"></i><a href="/users/login">Login</a></li>
     </ul>
     <main class="content">
+        
+            <h1 class="title"><span class="h1-title">P</span>ortfolio</h1>
+          
       <div class="square">
-      <div class="h1-square">
-        <h1>Portf<span class="spe">o</span>lio</h1>
-      </div>
       <div class="red-square"></div>
-      </div>
       <div class="char-header" >
-          <img src="/images/MorgHeader.gif" alt="morgana" id="Morg-header" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500" data-aos-anchor="#Head">
-          <img src="/images/Header-bulle.svg" alt="speak" id="Speak" data-aos="fade-right" data-aos-duration="200" data-aos-delay="1800" data-aos-anchor="#Head">
-          <p id="texte"></p>
-        </div>
+        <img src="/images/MorgHeader.gif" alt="morgana" id="Morg-header" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="500" data-aos-anchor="#Head">
+        <div class="speaker" data-aos="fade-right" data-aos-duration="500" data-aos-delay="1700" data-aos-anchor="#Head">
+        <p id="texte"></p>
+      </div>
+      </div>
+      </div>
+      
       </main>
       </div>
 </header>
