--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -1,3 +1,7 @@
+#Head {
+  margin-bottom: 2rem;
+}
+
 .content {
   &:after {
     content: "";
@@ -29,7 +33,7 @@
   margin-left: auto;
   width: 101%;
   margin-left: -1px;
-  height: 85%;
+  height: 95%;
 
   background-color: black;
   position: relative;
@@ -106,5 +110,63 @@
     width: 75%;
     font-size: 1.2rem;
     height: 100%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .title {
+    font-size: 3.5rem;
+  }
+
+  .h1-title {
+    font-size: 12rem;
+  }
+
+  .square {
+    clip-path: none;
+    height: 70%;
+  }
+  #Morg-header {
+    width: 55%;
+  }
+  .char-header {
+    .speaker {
+      margin-top: -5rem;
+      width: 430px;
+      height: 260px;
+      background: white;
+      padding-top: 8.5rem;
+      z-index: 3;
+
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      -webkit-clip-path: polygon(
+        0 96%,
+        100% 100%,
+        100% 24%,
+        56% 31%,
+        57% 0,
+        50% 32%,
+        0 43%
+      );
+      clip-path: polygon(
+        0 96%,
+        90% 100%,
+        100% 29%,
+        70% 31%,
+        55% 10%,
+        65% 34%,
+        10% 43%
+      );
+    }
+    p {
+      text-align: left;
+      color: black;
+      width: 65%;
+      font-size: 1.1rem;
+      height: 100%;
+    }
   }
 }
