--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <link rel="shortcut icon" href="" />
     <title>Portfolio</title>
   </head>
   <body>
