--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -64,8 +64,8 @@
       </a>
       <a href="https://github.com/Adousenpai" target="_blank">
         <i class="fab fa-github git"></i></a>
-        <a target="_blank" href="/Contact"><p>Me Contacter</p></a>
-      <a  target="_blank" href="/Contact"><i class="fas fa-envelope"></i></a>
+        <a  href="/Contact"><p>Me Contacter</p></a>
+      <a  href="/Contact"><i class="fas fa-envelope"></i></a>
       <p>Vous pouvez me suivre juste ici !</p>
       <ul class="reseau">
           <li>
