--- a/public/css/style.css
+++ b/public/css/style.css
@@ -200,6 +200,22 @@ body {
 .disapear {
   opacity: 0 !important; }
 
+@media screen and (max-width: 400px) {
+  .menu_toggle {
+    background: transparent; }
+
+  .menu-after {
+    opacity: 0; }
+
+  .menu_toggle .menu_open,
+  .menu_toggle .menu_close {
+    position: absolute;
+    top: 40%;
+    left: 40%;
+    margin-top: -15px;
+    margin-left: -12px;
+    transition: transform 0.7s cubic-bezier(1, 0.005, 0.24, 1);
+    color: white; } }
 #project-section {
   -webkit-clip-path: polygon(0 12%, 100% 0, 100% 100%, 0 100%);
   clip-path: polygon(0 8%, 100% 0, 100% 100%, 0 100%);
@@ -319,8 +335,8 @@ body {
   transition: 0.4s all ease;
   pointer-events: none; }
   #left:hover {
-    color: #ffffff;
-    transform: scale(1.3); }
+    color: #c90000;
+    transform: scale(1); }
 
 #right {
   cursor: pointer;
@@ -331,8 +347,8 @@ body {
   position: absolute;
   transition: 0.4s all ease; }
   #right:hover {
-    color: #ffffff;
-    transform: scale(1.3); }
+    color: #c90000;
+    transform: scale(1); }
 
 @media screen and (max-width: 992px) {
   #project-section {
@@ -369,10 +385,60 @@ body {
     justify-content: center;
     padding: 0 5%; }
     .container-project .project .project-text {
-      height: 35%; }
+      height: 35%;
+      margin-bottom: 1rem; }
       .container-project .project .project-text h2 {
         text-transform: uppercase;
         font-size: 1.8rem;
+        color: #000000;
+        white-space: nowrap; }
+      .container-project .project .project-text p {
+        white-space: nowrap;
+        word-wrap: break-word;
+        width: 100%;
+        font-size: 1rem;
+        margin-bottom: 0.5em; }
+    .container-project .project .project_img {
+      width: 95%; }
+    .container-project .project .btn-link {
+      display: flex;
+      flex-direction: column;
+      justify-content: center; }
+      .container-project .project .btn-link #btn1 {
+        margin-right: 0rem;
+        padding: 3px;
+        font-size: 0.9rem;
+        margin-bottom: 1rem; }
+      .container-project .project .btn-link #btn2 {
+        margin-right: 0rem;
+        padding: 3px;
+        font-size: 0.9rem;
+        margin-bottom: 1rem; }
+
+  #right {
+    font-size: 1.4rem;
+    top: 62%;
+    right: 15%;
+    color: white; }
+
+  #left {
+    font-size: 1.4rem;
+    top: 62%;
+    left: 15%;
+    color: white; } }
+@media screen and (max-width: 400px) {
+  #project-section {
+    height: 110vh; }
+
+  .container-project .project {
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 5%; }
+    .container-project .project .project-text {
+      height: 35%; }
+      .container-project .project .project-text h2 {
+        text-transform: uppercase;
+        font-size: 1.5rem;
         color: #000000;
         white-space: nowrap; }
       .container-project .project .project-text p {
@@ -392,15 +458,18 @@ body {
 
   #right {
     font-size: 2rem;
-    top: 62%;
+    top: 64%;
     right: 15%;
-    color: white; }
+    color: #c90000; }
 
   #left {
     font-size: 2rem;
-    top: 62%;
+    top: 64%;
     left: 15%;
-    color: white; } }
+    color: #c90000; }
+
+  .container-project .project .project-text {
+    margin-bottom: 1.5rem; } }
 #Head {
   margin-bottom: 2rem; }
 
@@ -486,20 +555,20 @@ body {
     font-size: 3.5rem; }
 
   .h1-title {
-    font-size: 12rem; }
+    font-size: 8rem; }
 
   .square {
     clip-path: none;
     height: 70%; }
 
   #Morg-header {
-    width: 55%; }
+    width: 65%; }
 
   .char-header .speaker {
     margin-top: -5rem;
     width: 30%;
-    min-width: 380px;
-    height: 260px;
+    min-width: 300px;
+    height: 250px;
     background: white;
     padding-top: 8.5rem;
     z-index: 3;
@@ -513,6 +582,31 @@ body {
     color: black;
     width: 75%;
     font-size: 1rem;
+    height: 100%; } }
+@media screen and (max-width: 400px) {
+  .title {
+    font-size: 2.7rem;
+    height: 210px; }
+
+  .h1-title {
+    font-size: 11rem;
+    letter-spacing: 10px; }
+
+  .char-header .speaker {
+    margin-top: -4rem;
+    width: 35%;
+    height: 210px;
+    background: white;
+    padding-top: 6.5rem;
+    z-index: 3;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  .char-header p {
+    text-align: left;
+    color: black;
+    width: 75%;
+    font-size: 0.9rem;
     height: 100%; } }
 .spe {
   color: #c90000;
@@ -574,10 +668,11 @@ body {
 
 @media screen and (max-width: 480px) {
   .h2-square {
-    width: 250px; }
+    width: 220px;
+    height: 50px; }
     .h2-square h2 {
       text-align: center;
-      font-size: 2.2rem; }
+      font-size: 2rem; }
     .h2-square:before {
       background-color: #000000; } }
 .h2-square2 {
@@ -709,6 +804,33 @@ footer {
   z-index: 8;
   transform: rotate(20deg); }
 
+@media screen and (max-width: 400px) {
+  .footer-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    left: 50%;
+    top: 25%;
+    z-index: 3; }
+    .footer-text .char-footer {
+      width: 30%;
+      display: flex;
+      justify-content: center; }
+      .footer-text .char-footer img {
+        width: 50%; }
+    .footer-text a {
+      color: white;
+      font-size: 1.2rem; }
+    .footer-text p {
+      color: white;
+      text-align: center;
+      font-size: 1rem; }
+    .footer-text .git:hover {
+      color: black; }
+
+  .reseau {
+    margin-bottom: 7rem; } }
 .Contact {
   display: flex;
   height: 100vh;
@@ -858,6 +980,19 @@ footer {
   opacity: 0; }
 
 @media screen and (max-width: 700px) {
+  .contact-square {
+    white-space: nowrap;
+    clip-path: none;
+    height: 50%; }
+    .contact-square h2 {
+      font-size: 1.5rem !important; } }
+@media screen and (max-width: 500px) {
+  .contact-form {
+    padding: 20px;
+    width: 90%;
+    left: 15px;
+    clip-path: none; }
+
   .contact-square {
     white-space: nowrap;
     clip-path: none;
@@ -1017,7 +1152,8 @@ footer {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%); }
+  transform: translate(-50%, -50%);
+  white-space: nowrap; }
 
 .text {
   color: white;
@@ -1060,6 +1196,9 @@ footer {
   opacity: 0;
   pointer-events: none; }
 
+@media screen and (max-width: 500px) {
+  .text {
+    font-size: 1.2rem; } }
 .warning {
   background-color: #ffc457;
   color: white;
