--- a/public/scss/_footer.scss
+++ b/public/scss/_footer.scss
@@ -153,3 +153,40 @@ footer {
   z-index: 8;
   transform: rotate(20deg);
 }
+
+@media screen and (max-width: 400px) {
+  .footer-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    left: 50%;
+    top: 25%;
+    z-index: 3;
+    .char-footer {
+      width: 30%;
+      display: flex;
+      justify-content: center;
+
+      img {
+        width: 50%;
+      }
+    }
+    a {
+      color: white;
+      font-size: 1.2rem;
+    }
+    p {
+      color: white;
+      text-align: center;
+      font-size: 1rem;
+    }
+    .git:hover {
+      color: black;
+    }
+  }
+
+  .reseau {
+    margin-bottom: 7rem;
+  }
+}
