--- a/public/scss/_form.scss
+++ b/public/scss/_form.scss
@@ -180,3 +180,22 @@
     }
   }
 }
+
+@media screen and (max-width: 500px) {
+  .contact-form {
+    padding: 20px;
+    width: 90%;
+    left: 15px;
+    clip-path: none;
+  }
+
+  .contact-square {
+    white-space: nowrap;
+    clip-path: none;
+    height: 50%;
+
+    h2 {
+      font-size: 1.5rem !important;
+    }
+  }
+}
