--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -120,7 +120,7 @@
   }
 
   .h1-title {
-    font-size: 12rem;
+    font-size: 8rem;
   }
 
   .square {
@@ -128,18 +128,17 @@
     height: 70%;
   }
   #Morg-header {
-    width: 55%;
+    width: 65%;
   }
   .char-header {
     .speaker {
       margin-top: -5rem;
       width: 30%;
-      min-width: 380px;
-      height: 260px;
+      min-width: 300px;
+      height: 250px;
       background: white;
       padding-top: 8.5rem;
       z-index: 3;
-
       display: flex;
       align-items: center;
       justify-content: center;
@@ -168,6 +167,39 @@
       color: black;
       width: 75%;
       font-size: 1rem;
+      height: 100%;
+    }
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .title {
+    font-size: 2.7rem;
+    height: 210px;
+  }
+
+  .h1-title {
+    font-size: 11rem;
+    letter-spacing: 10px;
+  }
+  .char-header {
+    .speaker {
+      margin-top: -4rem;
+      width: 35%;
+      // min-width: 380px;
+      height: 210px;
+      background: white;
+      padding-top: 6.5rem;
+      z-index: 3;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    p {
+      text-align: left;
+      color: black;
+      width: 75%;
+      font-size: 0.9rem;
       height: 100%;
     }
   }
