--- a/public/scss/_project.scss
+++ b/public/scss/_project.scss
@@ -136,8 +136,8 @@
   transition: 0.4s all ease;
   pointer-events: none;
   &:hover {
-    color: $white;
-    transform: scale(1.3);
+    color: $red;
+    transform: scale(1);
   }
 }
 #right {
@@ -150,8 +150,8 @@
   transition: 0.4s all ease;
 
   &:hover {
-    color: $white;
-    transform: scale(1.3);
+    color: $red;
+    transform: scale(1);
   }
 }
 
@@ -204,9 +204,71 @@
       padding: 0 5%;
       .project-text {
         height: 35%;
+        margin-bottom: 1rem;
         h2 {
           text-transform: uppercase;
           font-size: 1.8rem;
+          color: $black;
+          white-space: nowrap;
+        }
+        p {
+          white-space: nowrap;
+          word-wrap: break-word;
+          width: 100%;
+          font-size: 1rem;
+          margin-bottom: 0.5em;
+        }
+      }
+      .project_img {
+        width: 95%;
+      }
+      .btn-link {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        #btn1 {
+          margin-right: 0rem;
+          padding: 3px;
+          font-size: 0.9rem;
+          margin-bottom: 1rem;
+        }
+        #btn2 {
+          margin-right: 0rem;
+          padding: 3px;
+          font-size: 0.9rem;
+          margin-bottom: 1rem;
+        }
+      }
+    }
+  }
+  #right {
+    font-size: 1.4rem;
+    top: 62%;
+    right: 15%;
+    color: white;
+  }
+  #left {
+    font-size: 1.4rem;
+    top: 62%;
+    left: 15%;
+    color: white;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  #project-section {
+    height: 110vh;
+  }
+  .container-project {
+    .project {
+      flex-direction: column;
+      justify-content: center;
+      padding: 0 5%;
+      .project-text {
+        height: 35%;
+        h2 {
+          text-transform: uppercase;
+          font-size: 1.5rem;
           color: $black;
           white-space: nowrap;
         }
@@ -233,14 +295,22 @@
   }
   #right {
     font-size: 2rem;
-    top: 62%;
+    top: 64%;
     right: 15%;
-    color: white;
+    color: $red;
   }
   #left {
     font-size: 2rem;
-    top: 62%;
+    top: 64%;
     left: 15%;
-    color: white;
+    color: $red;
+  }
+
+  .container-project {
+    .project {
+      .project-text {
+        margin-bottom: 1.5rem;
+      }
+    }
   }
 }
