--- a/public/scss/_typo.scss
+++ b/public/scss/_typo.scss
@@ -64,12 +64,13 @@
 
 @media screen and (max-width: 480px) {
   .h2-square {
-    width: 250px;
+    width: 220px;
+    height: 50px;
 
     h2 {
       // font-family: 'Dharma';
       text-align: center;
-      font-size: 2.2rem;
+      font-size: 2rem;
     }
     &:before {
       background-color: $black;
