--- a/public/css/style.css
+++ b/public/css/style.css
@@ -200,7 +200,10 @@ body {
 .disapear {
   opacity: 0 !important; }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 1300px) {
+  .menu_items {
+    bottom: 5%; } }
+@media screen and (max-width: 500px) {
   .menu_toggle {
     background: transparent; }
 
@@ -350,33 +353,7 @@ body {
     color: #c90000;
     transform: scale(1); }
 
-@media screen and (max-width: 992px) {
-  #project-section {
-    height: 105vh; }
-
-  .container-project .project {
-    flex-direction: column;
-    justify-content: center; }
-    .container-project .project .project-text {
-      height: 35%; }
-      .container-project .project .project-text h2 {
-        text-transform: uppercase;
-        font-size: 2rem;
-        color: #000000;
-        margin-bottom: 0.5em; }
-      .container-project .project .project-text p {
-        word-wrap: break-word;
-        width: 100%;
-        font-size: 1rem;
-        margin-bottom: 0.5em; }
-    .container-project .project .project_img {
-      width: 90%; }
-    .container-project .project .btn-link {
-      display: flex;
-      justify-content: center; }
-      .container-project .project .btn-link #btn1 {
-        margin-right: 5px; } }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1030px) {
   #project-section {
     height: 105vh; }
 
@@ -389,7 +366,57 @@ body {
       margin-bottom: 1rem; }
       .container-project .project .project-text h2 {
         text-transform: uppercase;
-        font-size: 1.8rem;
+        font-size: 2.5rem;
+        color: #000000;
+        white-space: nowrap; }
+      .container-project .project .project-text p {
+        white-space: nowrap;
+        word-wrap: break-word;
+        width: 100%;
+        font-size: 1.5rem;
+        margin-bottom: 0.5em; }
+    .container-project .project .project_img {
+      width: 95%; }
+    .container-project .project .btn-link {
+      display: flex;
+      flex-direction: row;
+      justify-content: center; }
+      .container-project .project .btn-link #btn1 {
+        margin-right: 1rem;
+        padding: 10px;
+        font-size: 1.5rem;
+        margin-bottom: 1rem; }
+      .container-project .project .btn-link #btn2 {
+        margin-right: 0rem;
+        padding: 10px;
+        font-size: 1.5rem;
+        margin-bottom: 1rem; }
+
+  #right {
+    font-size: 3.5rem;
+    top: 64%;
+    right: 15%;
+    color: #c90000; }
+
+  #left {
+    font-size: 3.5rem;
+    top: 64%;
+    left: 15%;
+    color: #c90000; } }
+@media screen and (max-width: 500px) {
+  #project-section {
+    height: 105vh; }
+
+  .container-project .project {
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 5%; }
+    .container-project .project .project-text {
+      height: 35%;
+      margin-bottom: 1rem; }
+      .container-project .project .project-text h2 {
+        text-transform: uppercase;
+        font-size: 1.6rem;
         color: #000000;
         white-space: nowrap; }
       .container-project .project .project-text p {
@@ -416,60 +443,16 @@ body {
         margin-bottom: 1rem; }
 
   #right {
-    font-size: 1.4rem;
-    top: 62%;
-    right: 15%;
-    color: white; }
-
-  #left {
-    font-size: 1.4rem;
-    top: 62%;
-    left: 15%;
-    color: white; } }
-@media screen and (max-width: 400px) {
-  #project-section {
-    height: 110vh; }
-
-  .container-project .project {
-    flex-direction: column;
-    justify-content: center;
-    padding: 0 5%; }
-    .container-project .project .project-text {
-      height: 35%; }
-      .container-project .project .project-text h2 {
-        text-transform: uppercase;
-        font-size: 1.5rem;
-        color: #000000;
-        white-space: nowrap; }
-      .container-project .project .project-text p {
-        word-wrap: break-word;
-        width: 100%;
-        font-size: 1rem;
-        margin-bottom: 0.5em; }
-    .container-project .project .project_img {
-      width: 95%; }
-    .container-project .project .btn-link {
-      display: flex;
-      flex-direction: column;
-      justify-content: center; }
-      .container-project .project .btn-link #btn1 {
-        margin-right: 0rem;
-        margin-bottom: 1rem; }
-
-  #right {
     font-size: 2rem;
-    top: 64%;
+    top: 65%;
     right: 15%;
     color: #c90000; }
 
   #left {
     font-size: 2rem;
-    top: 64%;
+    top: 65%;
     left: 15%;
-    color: #c90000; }
-
-  .container-project .project .project-text {
-    margin-bottom: 1.5rem; } }
+    color: #c90000; } }
 #Head {
   margin-bottom: 2rem; }
 
@@ -550,40 +533,45 @@ body {
     font-size: 1.2rem;
     height: 100%; }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1030px) {
   .title {
-    font-size: 3.5rem; }
+    height: 260px;
+    font-size: 5rem; }
 
   .h1-title {
-    font-size: 8rem; }
+    font-size: 13rem;
+    letter-spacing: 2rem; }
 
   .square {
+    padding-top: 0;
     clip-path: none;
-    height: 70%; }
+    height: 75%;
+    justify-content: center; }
 
   #Morg-header {
-    width: 65%; }
+    width: 55%;
+    min-width: 260px; }
 
   .char-header .speaker {
-    margin-top: -5rem;
-    width: 30%;
+    margin-top: -6rem;
+    width: 80%;
     min-width: 300px;
-    height: 250px;
+    height: 330px;
     background: white;
-    padding-top: 8.5rem;
+    padding-top: 10rem;
     z-index: 3;
     display: flex;
     align-items: center;
     justify-content: center;
     -webkit-clip-path: polygon(0 96%, 100% 100%, 100% 24%, 56% 31%, 57% 0, 50% 32%, 0 43%);
-    clip-path: polygon(0 96%, 90% 100%, 100% 29%, 70% 31%, 55% 10%, 65% 34%, 10% 43%); }
+    clip-path: polygon(0 96%, 90% 100%, 100% 29%, 70% 31%, 60% 1%, 65% 34%, 10% 43%); }
   .char-header p {
     text-align: left;
     color: black;
     width: 75%;
-    font-size: 1rem;
+    font-size: 1.7rem;
     height: 100%; } }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .title {
     font-size: 2.7rem;
     height: 210px; }
@@ -592,16 +580,27 @@ body {
     font-size: 11rem;
     letter-spacing: 10px; }
 
+  .square {
+    clip-path: none;
+    height: 60%; }
+
+  #Morg-header {
+    width: 55%;
+    min-width: 200px; }
+
   .char-header .speaker {
-    margin-top: -4rem;
-    width: 35%;
-    height: 210px;
+    margin-top: -4.8rem;
+    width: 40%;
+    min-width: 300px;
+    height: 220px;
     background: white;
-    padding-top: 6.5rem;
+    padding-top: 7rem;
     z-index: 3;
     display: flex;
     align-items: center;
-    justify-content: center; }
+    justify-content: center;
+    -webkit-clip-path: polygon(0 96%, 100% 100%, 100% 24%, 56% 31%, 57% 0, 50% 32%, 0 43%);
+    clip-path: polygon(0 96%, 90% 100%, 100% 29%, 70% 31%, 55% 10%, 65% 34%, 10% 43%); }
   .char-header p {
     text-align: left;
     color: black;
@@ -666,7 +665,16 @@ body {
   top: 7%;
   left: 51%; }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1030px) {
+  .h2-square {
+    width: 420px;
+    height: 100px; }
+    .h2-square h2 {
+      text-align: center;
+      font-size: 4rem; }
+    .h2-square:before {
+      background-color: #000000; } }
+@media screen and (max-width: 500px) {
   .h2-square {
     width: 220px;
     height: 50px; }
@@ -804,7 +812,36 @@ footer {
   z-index: 8;
   transform: rotate(20deg); }
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 1030px) {
+  .footer-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    left: 50%;
+    top: 25%;
+    z-index: 3; }
+    .footer-text .char-footer {
+      width: 30%;
+      display: flex;
+      justify-content: center; }
+      .footer-text .char-footer img {
+        width: 70%; }
+    .footer-text a {
+      color: white;
+      font-size: 1.7rem; }
+    .footer-text p {
+      color: white;
+      text-align: center;
+      font-size: 1.7rem; }
+    .footer-text i {
+      font-size: 4rem; }
+    .footer-text .git:hover {
+      color: black; }
+
+  .reseau {
+    margin-bottom: 7rem; } }
+@media screen and (max-width: 500px) {
   .footer-text {
     display: flex;
     flex-direction: column;
