--- a/public/scss/_header.scss
+++ b/public/scss/_header.scss
@@ -114,30 +114,98 @@
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1030px) {
   .title {
-    font-size: 3.5rem;
+    height: 260px;
+    font-size: 5rem;
   }
 
   .h1-title {
-    font-size: 8rem;
+    font-size: 13rem;
+    letter-spacing: 2rem;
+  }
+
+  .square {
+    padding-top: 0;
+    clip-path: none;
+    height: 75%;
+    justify-content: center;
+  }
+  #Morg-header {
+    width: 55%;
+    min-width: 260px;
+  }
+  .char-header {
+    .speaker {
+      margin-top: -6rem;
+      width: 80%;
+      min-width: 300px;
+      height: 330px;
+      // max-width: 543px;
+
+      background: white;
+      padding-top: 10rem;
+      z-index: 3;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      -webkit-clip-path: polygon(
+        0 96%,
+        100% 100%,
+        100% 24%,
+        56% 31%,
+        57% 0,
+        50% 32%,
+        0 43%
+      );
+      clip-path: polygon(
+        0 96%,
+        90% 100%,
+        100% 29%,
+        70% 31%,
+        60% 1%,
+        65% 34%,
+        10% 43%
+      );
+    }
+    p {
+      text-align: left;
+      color: black;
+      width: 75%;
+      font-size: 1.7rem;
+      height: 100%;
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .title {
+    font-size: 2.7rem;
+    height: 210px;
+  }
+
+  .h1-title {
+    font-size: 11rem;
+    letter-spacing: 10px;
   }
 
   .square {
     clip-path: none;
-    height: 70%;
+    height: 60%;
   }
   #Morg-header {
-    width: 65%;
+    width: 55%;
+    min-width: 200px;
   }
   .char-header {
     .speaker {
-      margin-top: -5rem;
-      width: 30%;
+      margin-top: -4.8rem;
+      width: 40%;
       min-width: 300px;
-      height: 250px;
+      height: 220px;
       background: white;
-      padding-top: 8.5rem;
+      padding-top: 7rem;
       z-index: 3;
       display: flex;
       align-items: center;
@@ -161,39 +229,6 @@
         65% 34%,
         10% 43%
       );
-    }
-    p {
-      text-align: left;
-      color: black;
-      width: 75%;
-      font-size: 1rem;
-      height: 100%;
-    }
-  }
-}
-
-@media screen and (max-width: 400px) {
-  .title {
-    font-size: 2.7rem;
-    height: 210px;
-  }
-
-  .h1-title {
-    font-size: 11rem;
-    letter-spacing: 10px;
-  }
-  .char-header {
-    .speaker {
-      margin-top: -4rem;
-      width: 35%;
-      // min-width: 380px;
-      height: 210px;
-      background: white;
-      padding-top: 6.5rem;
-      z-index: 3;
-      display: flex;
-      align-items: center;
-      justify-content: center;
     }
     p {
       text-align: left;
