--- a/public/scss/_project.scss
+++ b/public/scss/_project.scss
@@ -156,44 +156,7 @@
 }
 
 //  Responsive //////////////////////////////////
-@media screen and (max-width: 992px) {
-  #project-section {
-    height: 105vh;
-  }
-  .container-project {
-    .project {
-      flex-direction: column;
-      justify-content: center;
-      .project-text {
-        height: 35%;
-        h2 {
-          text-transform: uppercase;
-          font-size: 2rem;
-          color: $black;
-          margin-bottom: 0.5em;
-        }
-        p {
-          word-wrap: break-word;
-          width: 100%;
-          font-size: 1rem;
-          margin-bottom: 0.5em;
-        }
-      }
-      .project_img {
-        width: 90%;
-      }
-      .btn-link {
-        display: flex;
-        justify-content: center;
-        #btn1 {
-          margin-right: 5px;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1030px) {
   #project-section {
     height: 105vh;
   }
@@ -207,7 +170,69 @@
         margin-bottom: 1rem;
         h2 {
           text-transform: uppercase;
-          font-size: 1.8rem;
+          font-size: 2.5rem;
+          color: $black;
+          white-space: nowrap;
+        }
+        p {
+          white-space: nowrap;
+          word-wrap: break-word;
+          width: 100%;
+          font-size: 1.5rem;
+          margin-bottom: 0.5em;
+        }
+      }
+      .project_img {
+        width: 95%;
+      }
+      .btn-link {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        #btn1 {
+          margin-right: 1rem;
+          padding: 10px;
+          font-size: 1.5rem;
+          margin-bottom: 1rem;
+        }
+        #btn2 {
+          margin-right: 0rem;
+          padding: 10px;
+          font-size: 1.5rem;
+          margin-bottom: 1rem;
+        }
+      }
+    }
+  }
+  #right {
+    font-size: 3.5rem;
+    top: 64%;
+    right: 15%;
+    color: $red;
+  }
+  #left {
+    font-size: 3.5rem;
+    top: 64%;
+    left: 15%;
+    color: $red;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  #project-section {
+    height: 105vh;
+  }
+  .container-project {
+    .project {
+      flex-direction: column;
+      justify-content: center;
+      padding: 0 5%;
+      .project-text {
+        height: 35%;
+        margin-bottom: 1rem;
+        h2 {
+          text-transform: uppercase;
+          font-size: 1.6rem;
           color: $black;
           white-space: nowrap;
         }
@@ -242,75 +267,15 @@
     }
   }
   #right {
-    font-size: 1.4rem;
-    top: 62%;
-    right: 15%;
-    color: white;
-  }
-  #left {
-    font-size: 1.4rem;
-    top: 62%;
-    left: 15%;
-    color: white;
-  }
-}
-
-@media screen and (max-width: 400px) {
-  #project-section {
-    height: 110vh;
-  }
-  .container-project {
-    .project {
-      flex-direction: column;
-      justify-content: center;
-      padding: 0 5%;
-      .project-text {
-        height: 35%;
-        h2 {
-          text-transform: uppercase;
-          font-size: 1.5rem;
-          color: $black;
-          white-space: nowrap;
-        }
-        p {
-          word-wrap: break-word;
-          width: 100%;
-          font-size: 1rem;
-          margin-bottom: 0.5em;
-        }
-      }
-      .project_img {
-        width: 95%;
-      }
-      .btn-link {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        #btn1 {
-          margin-right: 0rem;
-          margin-bottom: 1rem;
-        }
-      }
-    }
-  }
-  #right {
     font-size: 2rem;
-    top: 64%;
+    top: 65%;
     right: 15%;
     color: $red;
   }
   #left {
     font-size: 2rem;
-    top: 64%;
+    top: 65%;
     left: 15%;
     color: $red;
-  }
-
-  .container-project {
-    .project {
-      .project-text {
-        margin-bottom: 1.5rem;
-      }
-    }
   }
 }
